# dataset-create

./: .gitignore  README.md  README_zh.md  pyproject.toml
dataset_creator/: __init__.py  cli.py
dataset_creator/core/: __init__.py  common.py  dataset.py  project.py  task.py
dataset_creator/data_gen/: __init__.py  generator.py  question_generator.py
dataset_creator/fine_tune/: __init__.py  fine_tuner.py
dataset_creator/utils/: __init__.py  file_utils.py  name_generator.py
examples/: README.md  basic_usage.py  english_example.py  siliconflow_example.py  siliconflow_example_test.py  virtual_companion_example.py
